# awesfx

./: .cvsignore  .gitignore  .hgignore  ChangeLog  Imakefile  Makefile-shared  Makefile-static  Makefile.am  README  agusload.c  alsa.c  asfxload.c  aweset.c  awesfx.spec  configure.in  gusload.c  guspatch.h  seq.c  seq.h  setfx.c  sf2text.c  sfxload.1  sfxload.c  sfxload.man  sfxtest.c  text2sf.c  version.h
awelib/: .cvsignore  Imakefile  Makefile-shared  Makefile-static  Makefile.am  awe_parm.c  bool.c  cmpopen.c  config.h  dummy.c  dynload.c  fskip.c  gentxt.c  loadbank.c  loadtext.c  malloc.c  mygetopt.c  optfile.c  parsesf.c  path.c  sample.c  sbkconv.c  sffile.c  sfitem.c  sfopts.c  sfout.c  slist.c
docs/: ChangeLog.sfx  INSTALL  README  SBKtoSF2.txt
etc/: 41-soundfont.rules  Makefile.am  awesfx-suse.spec  awesfx.spec  load-soundfont  udev-soundfont
include/: .cvsignore  Imakefile  Makefile.am  awe_parm.h  awe_version.h.in  awebank.h  aweseq.h  itypes.h  sffile.h  sfitem.h  sflayer.h  sfopts.h  slist.h  util.h
samples/: Makefile.am  README-bank  ch12msup.bnk  default-2m.bnk  emu8m.bnk  setfx-sample.cfg  test.bnk  xgdefault.bnk  xgdrum.bnk  xgmap.bnk  xgsfx.bnk
